--- a/Codigo Base/pom.xml
+++ b/Codigo Base/pom.xml
@@ -25,6 +25,26 @@
             <artifactId>fxgl-base</artifactId>
             <version>0.5.4</version>
         </dependency>
+        <dependency>
+            <groupId>com.github.almasb</groupId>
+            <artifactId>fxgl-base</artifactId>
+            <version>0.5.4</version>
+        </dependency>
+        <dependency>
+            <groupId>com.github.almasb</groupId>
+            <artifactId>fxgl-base</artifactId>
+            <version>0.5.4</version>
+        </dependency>
+        <dependency>
+            <groupId>com.github.almasb</groupId>
+            <artifactId>fxgl-base</artifactId>
+            <version>0.5.4</version>
+        </dependency>
+        <dependency>
+            <groupId>com.github.almasb</groupId>
+            <artifactId>fxgl-base</artifactId>
+            <version>0.5.4</version>
+        </dependency>
     </dependencies>
 
     <properties>
